2008-08-12  Armin Burgmeier  <armin@openismus.com>

	* win32/build_installer: Take a revision number as argument, producing
	for instance glom-setup-1.7.1-2.exe.

	* win32/glom.iss.in: Hide the components page, since all components
	are fixed anyway.

	* README: Added some general information on how the installer is
	built.

2008-08-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/utils.cc:
	* glom/libglom/utils.h: show_help() Add a note that this is a replacement 
	for gnome_help_display() until we have something in GTK+.

2008-08-11  Armin Burgmeier  <armin@openismus.com>

	* win32/build_installer:
	* win32/glom.iss.in: Added libeay32.dll and ssleay32.dll to the
	installer. These seem to be required for libpq.dll, which is in turn
	required by the libgda postgres provider.

2008-08-05  Armin Burgmeier  <armin@openismus.com>

	* win32/build-installer:
	* win32/glom.iss.in:
	* win32/querymodules.bat: Updated to fit my new build setup. 

2008-08-05  Armin Burgmeier  <armin@openismus.com>

	* glom/dialog_existing_or_new.cc: Changed the path where the example
	files are looked up on Windows, to keep it consistent with the path to
	load glade files from.

2008-08-01  Claude Paroz  <claude@2xlibre.net>

	* glom/glom.glade: Removed translatable property from stock labels.

2008-07-23  Armin Burgmeier  <armin@openismus.com>

	* glom/existing_or_new.h:
	* glom/existing_or_new.cc: Hide the network item on Windows in the
	initial dialog.

2008-07-23  Armin Burgmeier  <armin@openismus.com>

	* glom/glom.glade: Removed the image from the Select button in the
	initial dialog.

	* glom/dialog_existing_or_new.cc: Add the image in the Code, via
	Gtk::Button::set_image. This way the image is not shown when the theme
	doesn't show images on buttons, such as the MS-Windows theme.

2008-07-21  Armin Burgmeier  <armin@openismus.com>

	* glom/main.cc: #ifdef out the atexit() call on Windows since
	__libc_freeres() is not available there.
