@@ -205,16 +205,17 @@ cp $POSTGRESDIR/bin/postgres.exe installer/bin || exit
 cp $POSTGRESDIR/bin/initdb.exe installer/bin || exit
 cp $POSTGRESDIR/bin/pg_ctl.exe installer/bin || exit
 
-cp $POSTGRESDIR/bin/libpq.dll installer/bin || exit
+cp $POSTGRESDIR/lib/libpq.dll installer/bin || exit
+strip installer/bin/postgres.exe installer/bin/initdb.exe installer/bin/pg_ctl.exe installer/bin/libpq.dll
 # This is required by libpq.dll:
-cp $POSTGRESDIR/bin/libintl3.dll installer/bin || exit
-cp $POSTGRESDIR/bin/libiconv2.dll installer/bin || exit
-cp $POSTGRESDIR/bin/krb5_32.dll installer/bin || exit
-cp $POSTGRESDIR/bin/k5sprt32.dll installer/bin || exit
-cp $POSTGRESDIR/bin/gssapi32.dll installer/bin || exit
-cp $POSTGRESDIR/bin/comerr32.dll installer/bin || exit
-cp $POSTGRESDIR/bin/libeay32.dll installer/bin || exit
-cp $POSTGRESDIR/bin/ssleay32.dll installer/bin || exit
+#cp $POSTGRESDIR/bin/libintl3.dll installer/bin || exit
+#cp $POSTGRESDIR/bin/libiconv2.dll installer/bin || exit
+#cp $POSTGRESDIR/bin/krb5_32.dll installer/bin || exit
+#cp $POSTGRESDIR/bin/k5sprt32.dll installer/bin || exit
+#cp $POSTGRESDIR/bin/gssapi32.dll installer/bin || exit
+#cp $POSTGRESDIR/bin/comerr32.dll installer/bin || exit
+#cp $POSTGRESDIR/bin/libeay32.dll installer/bin || exit
+#cp $POSTGRESDIR/bin/ssleay32.dll installer/bin || exit
 
 mkdir -p installer/share/postgresql || exit
 cp $POSTGRESDIR/share/postgres.bki installer/share/postgresql || exit
@@ -234,7 +235,8 @@ cp -R $POSTGRESDIR/share/timezonesets installer/share/postgresql || exit
 mkdir -p installer/lib/postgresql || exit
 cp $POSTGRESDIR/lib/*.dll installer/lib/postgresql || exit
 # These are not conversion modules
-rm installer/lib/postgresql/libecpg.dll installer/lib/postgresql/libecpg_compat.dll installer/lib/postgresql/libpgtypes.dll installer/lib/postgresql/pgevent.dll installer/lib/postgresql/plpgsql.dll || exit
+rm installer/lib/postgresql/libecpg.dll installer/lib/postgresql/libecpg_compat.dll installer/lib/postgresql/libpgtypes.dll installer/lib/postgresql/libpq.dll installer/lib/postgresql/pgevent.dll installer/lib/postgresql/plpgsql.dll || exit
+strip installer/lib/postgresql/*.dll
 
 echo "Copying shared data (glade files, icons, etc.)..."
 
