@@ -92,14 +92,14 @@ Source: "bin/postgres.exe"; DestDir: "{app}/bin"; Components: main
 Source: "bin/initdb.exe"; DestDir: "{app}/bin"; Components: main
 Source: "bin/pg_ctl.exe"; DestDir: "{app}/bin"; Components: main
 Source: "bin/libpq.dll"; DestDir: "{app}/bin"; Components: main
-Source: "bin/libintl3.dll"; DestDir: "{app}/bin"; Components: main
-Source: "bin/libiconv2.dll"; DestDir: "{app}/bin"; Components: main
-Source: "bin/krb5_32.dll"; DestDir: "{app}/bin"; Components: main
-Source: "bin/k5sprt32.dll"; DestDir: "{app}/bin"; Components: main
-Source: "bin/gssapi32.dll"; DestDir: "{app}/bin"; Components: main
-Source: "bin/comerr32.dll"; DestDir: "{app}/bin"; Components: main
-Source: "bin/libeay32.dll"; DestDir: "{app}/bin"; Components: main
-Source: "bin/ssleay32.dll"; DestDir: "{app}/bin"; Components: main
+;Source: "bin/libintl3.dll"; DestDir: "{app}/bin"; Components: main
+;Source: "bin/libiconv2.dll"; DestDir: "{app}/bin"; Components: main
+;Source: "bin/krb5_32.dll"; DestDir: "{app}/bin"; Components: main
+;Source: "bin/k5sprt32.dll"; DestDir: "{app}/bin"; Components: main
+;Source: "bin/gssapi32.dll"; DestDir: "{app}/bin"; Components: main
+;Source: "bin/comerr32.dll"; DestDir: "{app}/bin"; Components: main
+;Source: "bin/libeay32.dll"; DestDir: "{app}/bin"; Components: main
+;Source: "bin/ssleay32.dll"; DestDir: "{app}/bin"; Components: main
 
 ; TODO: I would like to install these into {app}/share/postgresql, but postgres
 ; does not find them then. Perhaps we should install all of postgres elsewhere,
